# FlyCV

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  README_CN.md  README_EN.md
benchmark/: CMakeLists.txt
benchmark/common/: utils.h
benchmark/modules/core/: mat_bench.cpp
benchmark/modules/fusion/: bgr_to_rgba_with_mask.cpp  bgra_to_resize_to_bgr.cpp  normallze_to_submean_to_reorder.cpp  nv12_to_resize_to_bgr_bench.cpp  nv21_to_resize_to_bgr_bench.cpp  split_to_mem.cpp
benchmark/modules/fusion_api/: bgr_to_rgba_with_mask.cpp  bgra_to_resize_to_bgr.cpp  normallze_to_submean_to_reorder.cpp  nv21_to_resize_to_bgr_bench.cpp  split_to_mem.cpp  y420sp_to_resize_to_bgr_bench.cpp
benchmark/modules/img_calculation/: box_points_bench.cpp  connected_components_bench.cpp  find_homography_bench.cpp  matrix_mul_bench.cpp  mean_bench.cpp  min_area_rect_bench.cpp  min_max_loc_bench.cpp  norm_bench.cpp
benchmark/modules/img_draw/: circle_bench.cpp  line_bench.cpp
benchmark/modules/img_transform/: add_weighted_bench.cpp  color_convert_bench.cpp  copy_make_border_bench.cpp  crop_bench.cpp  extract_channel_bench.cpp  flip_bench.cpp  remap_bench.cpp  resize_bench.cpp  rotation_bench.cpp  subtract_bench.cpp  warp_affine_bench.cpp  warp_perspective_bench.cpp
benchmark/modules/math_operator/: math_operator_bench.cpp
modules/: CMakeLists.txt
modules/core/allocator/include/: cpu_allocator.h  cuda_allocator.h
modules/core/allocator/interface/: base_allocator.h
modules/core/allocator/src/: base_allocator.cpp  cpu_allocator.cpp  cuda_allocator.cpp
modules/core/base/include/: common_avx.h  common_sse.h  immintrin_extend.h  macro_platforms.h  macro_utils.h  type_info.h  utils.h
modules/core/base/interface/: basic_types.h  cuda_types.h  log.h  log_c.h  macro_export.h  macro_ns.h
modules/core/base/src/: basic_types.cpp  basic_types_js.cpp  log.cpp  log_c.cpp  type_info.cpp
modules/core/basic_math/interface/: basic_math.h
modules/core/cmat/include/: cmat_common.h
modules/core/cmat/interface/: basic_types_c.h  cmat.h
modules/core/cmat/src/: cmat.cpp
modules/core/cpu/interface/: cpu.h
modules/core/cpu/src/: cpu.cpp
modules/core/mat/include/: mat_convert_to_arm.h  mat_convert_to_common.h  mat_dot_arm.h  mat_dot_common.h
modules/core/mat/interface/: cuda_mat.h  mat.h
modules/core/mat/src/: mat.cpp  mat_convert_to.cpp  mat_convert_to_arm.cpp  mat_convert_to_common.cpp  mat_copy.cpp  mat_dot.cpp  mat_dot_arm.cpp  mat_dot_common.cpp  mat_invert.cpp  mat_js.cpp
modules/core/opencl/include/: abstract_memory.h  opencl_common.h  opencl_context.h  opencl_execute_unit.h  opencl_memory_manager.h  opencl_runtime.h  opencl_utils.h  opencl_wrapper.h
modules/core/opencl/interface/: opencl.h
modules/core/opencl/src/: opencl.cpp  opencl_context.cpp  opencl_memory_manager.cpp  opencl_runtime.cpp  opencl_utils.cpp  opencl_wrapper.cpp
modules/core/parallel/include/: parallel_handler.h  parallel_handler_thread.h  parallel_manager.h  thread_pool.h
modules/core/parallel/interface/: parallel.h
modules/core/parallel/src/: parallel.cpp  parallel_handler_thread.cpp  parallel_manager.cpp  thread_pool.cpp
modules/fusion_api/bgr_to_rgba_with_mask/include/: bgr_to_rgba_with_mask_arm.h  bgr_to_rgba_with_mask_common.h  bgr_to_rgba_with_mask_sse.h
modules/fusion_api/bgr_to_rgba_with_mask/interface/: bgr_to_rgba_with_mask.h  bgr_to_rgba_with_mask_c.h
modules/fusion_api/bgr_to_rgba_with_mask/src/: bgr_to_rgba_with_mask.cpp  bgr_to_rgba_with_mask_arm.cpp  bgr_to_rgba_with_mask_c.cpp  bgr_to_rgba_with_mask_common.cpp  bgr_to_rgba_with_mask_js.cpp  bgr_to_rgba_with_mask_sse.cpp
modules/fusion_api/bgra_to_resize_to_bgr/include/: bgra_to_resize_to_bgr_arm.h  bgra_to_resize_to_bgr_common.h
modules/fusion_api/bgra_to_resize_to_bgr/interface/: bgra_to_resize_to_bgr.h  bgra_to_resize_to_bgr_c.h
modules/fusion_api/bgra_to_resize_to_bgr/src/: bgra_to_resize_to_bgr.cpp  bgra_to_resize_to_bgr_arm.cpp  bgra_to_resize_to_bgr_c.cpp  bgra_to_resize_to_bgr_common.cpp  bgra_to_resize_to_bgr_js.cpp
modules/fusion_api/normalize_to_submean_to_reorder/include/: normalize_to_submean_to_reorder_arm.h  normalize_to_submean_to_reorder_avx.h  normalize_to_submean_to_reorder_common.h
modules/fusion_api/normalize_to_submean_to_reorder/interface/: normalize_to_submean_to_reorder.h  normalize_to_submean_to_reorder_c.h
modules/fusion_api/normalize_to_submean_to_reorder/src/: normalize_to_submean_to_reorder.cpp  normalize_to_submean_to_reorder_arm.cpp  normalize_to_submean_to_reorder_avx.cpp  normalize_to_submean_to_reorder_c.cpp  normalize_to_submean_to_reorder_common.cpp  normalize_to_submean_to_reorder_js.cpp
modules/fusion_api/split_to_memcpy/include/: split_to_memcpy_arm.h  split_to_memcpy_common.h
modules/fusion_api/split_to_memcpy/interface/: split_to_memcpy.h  split_to_memcpy_c.h
modules/fusion_api/split_to_memcpy/src/: split_to_memcpy.cpp  (+3 more)
modules/js/: make_umd.py  utils.js
samples/: CMakeLists.txt
samples/android/image-transform/: .gitignore  build.gradle  settings.gradle
samples/armlinux/: CMakeLists.txt
samples/armlinux/scripts/: build.sh.in
tests/: CMakeLists.txt
tests/modules/core/: mat_test.cpp
tests/modules/fusion_api/: bgr_to_rgba_with_mask_test.cpp  bgra_to_resize_to_bgr_test.cpp  normalize_to_submean_to_reorder_test.cpp  split_to_memcpy_test.cpp  y420sp_to_resize_to_bgr_test.cpp
tests/modules/img_calculation/: connected_components_test.cpp  matrix_mul_test.cpp  mean_test.cpp  min_area_rect_test.cpp  min_max_loc_test.cpp  norm_test.cpp
tests/modules/img_draw/: circle_test.cpp  fill_poly_test.cpp  line_test.cpp
tests/modules/img_transform/: add_weighted_test.cpp  color_convert_test.cpp  copy_make_border_test.cpp  crop_test.cpp  extract_channel_test.cpp  flip_test.cpp  remap_test.cpp  resize_test.cpp  rotation_test.cpp  subtract_test.cpp  warp_affine_test.cpp  warp_perspective_test.cpp
tests/modules/math_operator/: vector_operator_test.cpp
tests/modules/media_io/: imgcodecs_test.cpp
tests/utils/: test_util.cpp  test_util.h
(+460 files in other folders)
